--- a/src/css/input.css
+++ b/src/css/input.css
@@ -11,5 +11,13 @@
 }
 
 .sombraImagen{
-    filter: drop-shadow(5px 5px 10px rgba(0, 0, 0, 0.486));
+    filter: drop-shadow(5px 5px 10px rgba(0, 0, 0, 0.316));
   }
+
+.shadowColor{
+    text-shadow: 1px 1px 1px rgba(10, 10, 10, 0.108);
+}
+
+.shadowColor2{
+    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.147);
+}
