--- a/public/css/output.css
+++ b/public/css/output.css
@@ -3863,14 +3863,6 @@ details.collapse summary::-webkit-details-marker {
   width: 100%;
 }
 
-.w-auto {
-  width: auto;
-}
-
-.min-w-full {
-  min-width: 100%;
-}
-
 .max-w-fit {
   max-width: -moz-fit-content;
   max-width: fit-content;
@@ -4150,10 +4142,6 @@ details.collapse summary::-webkit-details-marker {
   background-color: rgb(255 255 255 / 0.5);
 }
 
-.bg-opacity-0 {
-  --tw-bg-opacity: 0;
-}
-
 .bg-opacity-10 {
   --tw-bg-opacity: 0.1;
 }
@@ -4166,14 +4154,6 @@ details.collapse summary::-webkit-details-marker {
   --tw-bg-opacity: 0.25;
 }
 
-.bg-opacity-90 {
-  --tw-bg-opacity: 0.9;
-}
-
-.bg-opacity-70 {
-  --tw-bg-opacity: 0.7;
-}
-
 .bg-gradient-to-b {
   background-image: linear-gradient(to bottom, var(--tw-gradient-stops));
 }
@@ -4182,27 +4162,15 @@ details.collapse summary::-webkit-details-marker {
   background-image: linear-gradient(to right, var(--tw-gradient-stops));
 }
 
-.bg-gradient-to-bl {
-  background-image: linear-gradient(to bottom left, var(--tw-gradient-stops));
-}
-
-.bg-gradient-to-br {
-  background-image: linear-gradient(to bottom right, var(--tw-gradient-stops));
-}
-
-.bg-gradient-to-t {
-  background-image: linear-gradient(to top, var(--tw-gradient-stops));
-}
-
 .from-pink-200 {
   --tw-gradient-from: #FAD1E8 var(--tw-gradient-from-position);
   --tw-gradient-to: rgb(250 209 232 / 0) var(--tw-gradient-to-position);
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 
-.from-purple-300 {
-  --tw-gradient-from: #CABFFD var(--tw-gradient-from-position);
-  --tw-gradient-to: rgb(202 191 253 / 0) var(--tw-gradient-to-position);
+.from-purple-200 {
+  --tw-gradient-from: #DCD7FE var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(220 215 254 / 0) var(--tw-gradient-to-position);
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 
@@ -4212,10 +4180,12 @@ details.collapse summary::-webkit-details-marker {
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 
-.from-pink-100 {
-  --tw-gradient-from: #FCE8F3 var(--tw-gradient-from-position);
-  --tw-gradient-to: rgb(252 232 243 / 0) var(--tw-gradient-to-position);
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+.to-purple-400 {
+  --tw-gradient-to: #AC94FA var(--tw-gradient-to-position);
+}
+
+.to-purple-500 {
+  --tw-gradient-to: #9061F9 var(--tw-gradient-to-position);
 }
 
 .to-purple-600 {
@@ -4224,38 +4194,6 @@ details.collapse summary::-webkit-details-marker {
 
 .to-purple-800 {
   --tw-gradient-to: #5521B5 var(--tw-gradient-to-position);
-}
-
-.to-purple-900 {
-  --tw-gradient-to: #4A1D96 var(--tw-gradient-to-position);
-}
-
-.to-purple-950 {
-  --tw-gradient-to: #3b0764 var(--tw-gradient-to-position);
-}
-
-.to-purple-700 {
-  --tw-gradient-to: #6C2BD9 var(--tw-gradient-to-position);
-}
-
-.to-pink-300 {
-  --tw-gradient-to: #F8B4D9 var(--tw-gradient-to-position);
-}
-
-.to-pink-500 {
-  --tw-gradient-to: #E74694 var(--tw-gradient-to-position);
-}
-
-.to-pink-400 {
-  --tw-gradient-to: #F17EB8 var(--tw-gradient-to-position);
-}
-
-.to-purple-400 {
-  --tw-gradient-to: #AC94FA var(--tw-gradient-to-position);
-}
-
-.to-purple-300 {
-  --tw-gradient-to: #CABFFD var(--tw-gradient-to-position);
 }
 
 .bg-clip-text {
@@ -4642,11 +4580,11 @@ details.collapse summary::-webkit-details-marker {
 }
 
 .shadowColor{
-  filter: drop-shadow(1px 1px 0px rgba(0, 0, 0, 0.279));
+  filter: drop-shadow(1px 1px 0px rgba(0, 0, 0, 0.374));
 }
 
 .shadowColor2{
-  filter: drop-shadow(1px 1px 1px rgba(0, 0, 0, 0.453));
+  filter: drop-shadow(1px 1px 1px rgba(0, 0, 0, 0.522));
 }
 
 .sombraBoton{
