--- a/public/css/output.css
+++ b/public/css/output.css
@@ -3754,6 +3754,18 @@ details.collapse summary::-webkit-details-marker {
   margin-top: 1.75rem;
 }
 
+.mb-5 {
+  margin-bottom: 1.25rem;
+}
+
+.mb-3 {
+  margin-bottom: 0.75rem;
+}
+
+.mb-4 {
+  margin-bottom: 1rem;
+}
+
 .block {
   display: block;
 }
@@ -5184,6 +5196,10 @@ a .borde {
     margin-top: 0px;
   }
 
+  .md\:mb-4 {
+    margin-bottom: 1rem;
+  }
+
   .md\:block {
     display: block;
   }
@@ -5347,6 +5363,14 @@ a .borde {
 
   .xl\:mt-5 {
     margin-top: 1.25rem;
+  }
+
+  .xl\:mb-4 {
+    margin-bottom: 1rem;
+  }
+
+  .xl\:mb-5 {
+    margin-bottom: 1.25rem;
   }
 
   .xl\:flex {
